[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "head-on-client"
path = "src/main.rs"

[dependencies]
sim = { path = "../sim" }
macroquad = "0.4"
glam = { version = "0.29", default-features = false, features = ["libm"] }
ggrs = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
