[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "rokt_off_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rokt-off-client"
path = "src/main.rs"

[dependencies]
sim = { path = "../sim" }
macroquad = "0.4"
glam = { version = "0.29", default-features = false, features = ["libm"] }
serde = { version = "1.0.228", features = ["derive"] }
matchbox_socket = { version = "0.14", features = ["ggrs"] }
ggrs = "0.11"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.120"
wasm-bindgen-futures = "=0.4.70"
