[package]
name = "sim"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bitflags = "2"
glam = { version = "0.29", default-features = false, features = ["libm"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tiled = { version = "0.15", default-features = false }
